<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="179dp"
    tools:context=".SecondActivity">

    <include
        android:id="@+id/include"
        layout="@layout/intern_menu" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="203dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/limitTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/textAvailable"
        android:layout_width="128dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/available"
        android:textColor="@android:color/black"
        android:textSize="@dimen/camposSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="Disponível" />

    <TextView
        android:id="@+id/limitTextName"
        android:layout_width="73dp"
        android:layout_height="19dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="108dp"
        android:text="@string/limitText"
        android:textColor="@android:color/black"
        android:textSize="@dimen/smallFields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/limitValueField"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:text="@string/limitValue"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/smallFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/limitTextName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/availableValueField"
        android:layout_width="128dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:text="@string/availableValue"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/camposSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usedText"
        android:layout_width="78dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/usedTextName"
        android:textColor="@android:color/black"
        android:textSize="@dimen/smallFields"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/availableValueField"
        app:layout_constraintTop_toBottomOf="@+id/limitTextName"
        app:layout_constraintVertical_bias="0.012"
        tools:text="Utilizado: " />

    <TextView
        android:id="@+id/fieldUsedBox"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/usedValueField"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/smallFields"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limitValueField"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#ff8100"
        app:layout_constraintBottom_toTopOf="@+id/extractListId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usedText" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/extractListId"
        android:layout_width="0dp"
        android:layout_height="378dp"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usedText"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/recycler_view" />

</android.support.constraint.ConstraintLayout>